<resources>
    <string name="app_name">ShowPetsPicture</string>
    <string name="str_ques1">선택을 시작하시겠습니까?</string>
    <string name="str_ques2">좋아하는 애완동물은?</string>
    <string name="str_check">시작함</string>
    <string name="str_puppy">강아지</string>
    <string name="str_cat">고양이</string>
    <string name="str_rabbit">토끼</string>
    <string name="str_but_finish">종료</string>
    <string name="str_but_first">처음으로</string>
</resources>
