<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kr.ac.hywoman.minn.showpetspicture.MainActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ques1"
        android:textAppearance="?android:textAppearanceLarge"
        />
    <Switch
        android:id="@+id/switch_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_check"
        android:textAppearance="?android:textAppearanceMedium"
        />
    <TextView
        android:id="@+id/text_q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ques2"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="invisible"
        />
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioButton
            android:id="@+id/rb_puppy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_puppy"
            android:textAppearance="?android:textAppearanceMedium"
            android:visibility="invisible"
            />
        <RadioButton
            android:id="@+id/rb_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cat"
            android:textAppearance="?android:textAppearanceMedium"
            android:visibility="invisible"
            />
        <RadioButton
            android:id="@+id/rb_rabbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rabbit"
            android:textAppearance="?android:textAppearanceMedium"
            android:visibility="invisible"
            />
    </RadioGroup>

    <ImageView
        android:id="@+id/img_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/puppy"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/but_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_but_finish"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/but_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_but_first"
        android:visibility="invisible"
        />
</LinearLayout>
